fix: 解决了部分警告

--- a/ML4IR_implementation.ipynb
+++ b/ML4IR_implementation.ipynb
@@ -678,8 +678,9 @@
     "    model = TrainModel(DATA, [1500,1000,800,650], EMDloss)\n",
     "    \n",
     "    if MODE is Mode.TRAIN_SAVE:\n",
-    "        pickle.dump(DATA,open(\"DATA_n.pck\",\"wb\"))\n",
-    "        model.save(\"MODEL_n\")"
+    "        model.save(\"MODEL_n\")\n",
+    "        with open(\"MODEL_n.pck\",\"wb\") as f:\n",
+    "            pickle.dump(model, f)"
    ]
   },
   {
